[package]
name = "gemini-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
gcp_auth = "0.10.0"
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-eventsource = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.38.2", features = ["full"] }
base64 = "0.21.5"
